- Run vis as a server; don't merely compile vis into static assets. - Bump vis git sha.

--- a/assets/prod/nginx-configs/without-ssl/01-ccn-coverage.conf
+++ b/assets/prod/nginx-configs/without-ssl/01-ccn-coverage.conf
@@ -8,6 +8,6 @@ server {
         proxy_pass      http://localhost:3000;
     }
     location / {
-        root            /var/www/ccn-coverage;
+        proxy_pass      http://localhost:3002;
     }
 }
