--- a/assets/prod/nginx-configs/with-ssl/01-ccn-coverage.conf
+++ b/assets/prod/nginx-configs/with-ssl/01-ccn-coverage.conf
@@ -19,6 +19,6 @@ server {
         proxy_pass      http://localhost:3000;
     }
     location / {
-        root            /var/www/ccn-coverage;
+        proxy_pass      http://localhost:3002;
     }
 }
